
Access output:
 * Added support for the RIST (Reliable Internet Stream Transport) Protocol
 * Added support for HTTP PUT (HTTP upload)

Video output:
 * Added X11 RENDER video output plugin
 * Remove aa plugin
 * Remove evas plugin
 * Remove omxil_vout plugin
 * Remove RealRTSP plugin
 * Remove Real demuxer plugin
 * Fix washed out black on NVIDIA cards with Direct3D9

Video filter:
 * Update yadif
 * Remove remote OSD plugin

Stream output:
 * New SDI output with improved audio and ancillary support.
   Candidate for deprecation of decklink vout/aout modules.
 * Support for DLNA/UPNP renderers

Muxers:
 * MP4 files are no longer faststart by default

Service discovery:
 * Support Renderer discovery with avahi

macOS:
 * Remove Growl notification support
 * Improved AppleScript API with support for playback modes, recording, rate

appleOS:
 * Improved proxy configuration handling


Changes between 3.0.9.2 and 3.0.10:
----------------------------------

Misc:
 * Update Twitch & VLSub scripts


Changes between 3.0.9.1 and 3.0.9.2:
----------------------------------

Misc:
 * Properly bump the version in configure.ac


Changes between 3.0.9 and 3.0.9.1:
----------------------------------

Misc:
 * Fix VLSub returning 401 for earch request


Changes between 3.0.8 and 3.0.9:
----------------------------------

Core:
 * Work around busy looping when playing an invalid item through VLM

Access:
 * Multiple dvdread and dvdnav crashs fixes
 * Fixed DVD glitches on clip change
 * Fixed dvdread commands/data sequence inversion in some cases causing
   unwanted glitches
 * Better handling of authored as corrupted DVD
 * Added libsmb2 support for SMB2/3 shares

Demux:
 * Fix TTML entities not passed to decoder
 * Fixed some WebVTT styling tags being not applied
 * Misc raw H264/HEVC frame rate fixes
 * Fix adaptive regression on TS format change (mostly HLS)
 * Fixed MP4 regression with twos/sowt PCM audio
 * Fixed some MP4 raw quicktime and ms-PCM audio